--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         <a class="nav-link" href="#">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">CV</a>
+                        <a class="nav-link" href="papers/Resume4.0.pdf" target="_blank">CV</a>
                     </li>
                 </ul>
                 <span class="navbar-text">
@@ -188,7 +188,7 @@
                                     <p class="card-text">LinkedIn: <a class="card-link" href="https://www.linkedin.com/in/michael-green-7739a781/">Michael Green</a></p>
                                     <p class="card-text">Github: <a class="card-link" href="https://github.com/mcgreentn">mcgreentn</a></p>
                                     <p class="card-text">Soundcloud: <a class="card-link" href="https://soundcloud.com/trichampion">ChampChampChamp</a></p>
-                                    <a class="btn btn-default" href="papers/Resume4.0.pdf" target="_blank" role="button">Resume</a>
+                                    <a class="btn btn-primary btn-md active" role="button" href="papers/Resume4.0.pdf" target="_blank" role="button">Resume</a>
                                 </div>
                             </div>
                         </div>
