--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                                     </a>
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-text">I made this game with a team for my final project in my Narrative Game Design class in Spring 2018.</p>
+                                    <p class="card-text">I made this game with a team for my final project in my Narrative Game Design class in Spring 2018. The idea was to create a cyberpunk detective game using design techniques learned in class. I was the sole programmer on the team and thus was in charge of all programming and game mechanic related content. It's not much, but this was made in only 4 weeks!</p>
                                     <a href="https://champchampchamp.itch.io/2118-corruption" target="_blank"><img class="img-responsive img-rounded img-hover" src="images/2118Game.jpg" /></a>
                                 </div>
                             </div>
