--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                                     </a>
                                 </div>
                                 <div class="card-body" style="height:120%">
-                                    <p class="card-text">The Stay Alive series was one of my very first video games, originally made for mobiLehigh 2014. It is currently not found online, but I'm working on putting it up on itch.io!</p>
+                                    <p class="card-text">The Stay Alive series was one of my very first video games, originally made for mobiLehigh 2014. It is a visually-overwhelming, 2D, space-ship shooter game. It is currently not found online, but I'm working on putting it up on itch.io!</p>
                                     <!-- <a href="https://play.google.com/store/apps/details?id=com.TriChampionDevelopment.StayAlive" target="_blank"> -->
                                         <img class = "img-responsive img-rounded img-hover" src="images/stayalive.jpg"/>
                                     <!-- </a> -->
