--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Blog</a>
+                        <a class="nav-link" href="https://mikecgreenblog.wordpress.com/" target="_blank">Blog</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="papers/Resume4.0.pdf" target="_blank">CV</a>
