--- a/index.html
+++ b/index.html
@@ -509,7 +509,8 @@
     <!-- Script to Activate the Carousel -->
     <script>
     $('.carousel').carousel({
-        interval: 6000 //changes the speed
+        pause: false,
+        interval: 6000 //changes the speed    
     })
     </script>
 
