--- a/index.html
+++ b/index.html
@@ -209,12 +209,12 @@
                             <div class="card">
                                 <div class="card-header">
                                     <a class="black-text" href="#" target="_blank">
-                                        <h4>DATA Agent</h4>
+                                        <h4>Data Agent</h4>
                                         <h5 class="card-subtitle mb-2 text-muted">an open-data, murder mystery generator</h5>
                                     </a>
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-text">DATA Agent was the culmination of a massive research undertaking started by <a href="https://gabbbarros.com/">Gabriella Barros</a>. Given a person on Wikipedia, the system automatically generates an entire murder mystery adventure to play using evolutionary algorithms. The game client can then load up this game for you to play! TO BE RELEASED SOON!</p>
+                                    <p class="card-text">Data Agent was the culmination of a massive research undertaking started by <a href="https://gabbbarros.com/">Gabriella Barros</a>. Given a person on Wikipedia, the system automatically generates an entire murder mystery adventure to play using evolutionary algorithms. The game client can then load up this game for you to play! TO BE RELEASED SOON!</p>
                                     <a href="#"><img class = "img-responsive img-rounded img-hover" src="images/dataagent.png"/></a>
                                 </div>
                             </div>
