--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                                     </a>
                                 </div>
                                 <div class="card-body" style="height:120%">
-                                    <p class="card-text">The beginnings of my thesis research, AtDelfi is a system contained within the GVGAI Framework which reads in source code to output a tutorial.</p>
+                                    <p class="card-text">The beginnings of my thesis research, AtDelfi is a system contained within the GVGAI Framework which reads in source code to output a tutorial. The first AtDelfi paper, sent to FDG 2018, won the Best Paper Award of the conference.</p>
                                     <a href="http://game.engineering.nyu.edu/tutorial-generator/" target="_blank"><img class="img-responsive img-rounded img-hover" src="images/atdelfi.png"/></a>
                                 </div>
                             </div>
@@ -372,9 +372,10 @@
                                     <h5 class="card-subtitle mb-2 text-muted">stuff I've worked on</h5>
                                 </div>
                                 <div class="card-body-tall">
+                                    <p class="card-text">* = Best Paper Award ** = Best Paper Nomination
                                     <p class="card-text"><a href="papers/generating-levels-teach.pdf" target="_blank">[2018] Generating Levels That Teach Mechanics</a> – Michael Cerny Green, Ahmed Khalifa, Gabriella Alves Bulhoes Barros, Andy Nealen, Julian Togelius – Published @ PCG Workshop @ FDG 2018</p>
-                                    <p class="card-text"><a href="papers/atdelfi-automatically-designing.pdf" target="_blank">[2018] AtDelfi: Automatically Designing Legible, Full Instructions For Games</a> – Michael Cerny Green, Ahmed Khalifa, Gabriella Alves Bulhoes Barros, Tiago Machado, Andy Nealen, Julian Togelius – Published at FDG 2018</p>
-                                    <p class="card-text"><a href="papers/data-driven-design.pdf" target="_blank">[2018] Data-driven Design: A Case for Maximalist Game Design</a> – Gabriella Alves Bulhoes Barros, Michael Cerny Green, Antonios Liapis, Julian Togelius – Published at ICCC 2018</p>
+                                    <p class="card-text">*<a href="papers/atdelfi-automatically-designing.pdf" target="_blank">[2018] AtDelfi: Automatically Designing Legible, Full Instructions For Games</a> – Michael Cerny Green, Ahmed Khalifa, Gabriella Alves Bulhoes Barros, Tiago Machado, Andy Nealen, Julian Togelius – Published at FDG 2018</p>
+                                    <p class="card-text">**<a href="papers/data-driven-design.pdf" target="_blank">[2018] Data-driven Design: A Case for Maximalist Game Design</a> – Gabriella Alves Bulhoes Barros, Michael Cerny Green, Antonios Liapis, Julian Togelius – Published at ICCC 2018</p>
                                     <p class="card-text"><a href="papers/who-killed-albert.pdf" target="_blank">[2018] Who Killed Albert Einstein? From Open Data to Murder Mystery Games</a> – Gabriella Alves Bulhoes Barros, Michael Cerny Green, Antonios Liapis, Julian Togelius – Published in TOG 2018.</p>
                                     <p class="card-text"><a href="papers/automated-playtesting-procedural.pdf" target="_blank">[2018] Automated Playtesting with Procedural Personas with Evolved Heuristics</a> – Christoffer Holmgard, Michael Cerny Green, Antonios Liapis, Julian Togelius – Published in TOG 2018.</p>
                                     <p class="card-text"><a href="papers/press-space-fire.pdf" target="_blank">[2017] “Press Space To Fire”: Automatic Video Game Tutorial Generation</a> – Michael Cerny Green, Ahmed Khalifa, Gabriella A. B. Barros, and Julian Togelius – Published at EXAG Workshop @ AIIDE 2017.</p>
