--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                                         <p class="card-text">* = Best Paper Award || ** = Best Paper Nomination
                                         <p class="card-text"><a href="papers/generating-levels-teach.pdf" target="_blank">[2018] Generating Levels That Teach Mechanics</a> – Michael Cerny Green, Ahmed Khalifa, Gabriella Alves Bulhoes Barros, Andy Nealen, Julian Togelius – Published @ PCG Workshop @ FDG 2018</p>
                                         <p class="card-text">*<a href="papers/atdelfi-automatically-designing.pdf" target="_blank">[2018] AtDelfi: Automatically Designing Legible, Full Instructions For Games</a> – Michael Cerny Green, Ahmed Khalifa, Gabriella Alves Bulhoes Barros, Tiago Machado, Andy Nealen, Julian Togelius – Published @ FDG 2018</p>
-                                        <p class="card-text">*<a href="papers/data_agent.pdf" target="_blank">[2018] Data Agent</a> – Michael Cerny Green, Gabriella Alves Bulhoes Barros, Antonios Liapis, Julian Togelius – Published @ FDG 2018</p>
+                                        <p class="card-text"><a href="papers/data_agent.pdf" target="_blank">[2018] Data Agent</a> – Michael Cerny Green, Gabriella Alves Bulhoes Barros, Antonios Liapis, Julian Togelius – Published @ FDG 2018</p>
                                         <p class="card-text">**<a href="papers/data-driven-design.pdf" target="_blank">[2018] Data-driven Design: A Case for Maximalist Game Design</a> – Gabriella Alves Bulhoes Barros, Michael Cerny Green, Antonios Liapis, Julian Togelius – Published @ ICCC 2018</p>
                                         <p class="card-text"><a href="papers/who-killed-albert.pdf" target="_blank">[2018] Who Killed Albert Einstein? From Open Data to Murder Mystery Games</a> – Gabriella Alves Bulhoes Barros, Michael Cerny Green, Antonios Liapis, Julian Togelius – Published in TOG 2018.</p>
                                         <p class="card-text"><a href="papers/automated-playtesting-procedural.pdf" target="_blank">[2018] Automated Playtesting with Procedural Personas with Evolved Heuristics</a> – Christoffer Holmgard, Michael Cerny Green, Antonios Liapis, Julian Togelius – Published in TOG 2018.</p>
@@ -341,6 +341,20 @@
                                     <div class="card-body">
                                         <p class="card-text">A incredibly easy and efficient way to test AI against a large variety of simple 2d video games. I have helped develop the Rule-Generation Track together with some of my colleagues.</p>
                                         <a href="http://www.gvgai.net/" target="_blank"><img class = "img-responsive img-rounded img-hover" src="images/survivezombies.png"/></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-12">
+                                <div class="card">
+                                    <div class="card-header">
+                                        <a class="black-text" href="http://www.gvgai.net/">
+                                            <h4 class="card-title">The GDMC Challenge</h4>
+                                            <h5 class="card-subtitle mb-2 text-muted">generative design in minecraft</h5>
+                                        </a>
+                                    </div>
+                                    <div class="card-body">
+                                        <p class="card-text">The GDMC Settlement Generation Challenge is to produce an algorithm that is adaptive towards the provided map, creates a settlement that satisfies a range of functional requirement - and also looks good and evokes an interesting narrative. The goal is to produce an generatot that can rival the state of the art of what humans can produce.</p>
+                                        <a href="http://gendesignmc.engineering.nyu.edu/" target="_blank"><img class = "img-responsive img-rounded img-hover" src="images/minecraft.jpeg"/></a>
                                     </div>
                                 </div>
                             </div>                      
