update for new paper, image changes for carousel, GDMC image inclusion

--- a/index.html
+++ b/index.html
@@ -84,13 +84,22 @@
                         </div>
                     </div>
                     <div class="carousel-item">
+                        <img class="d-block w-100" src="images/gdmc.png">
+                            <div class="carousel-caption">
+                              <div class="carousel-caption d-none d-md-block">
+                                <h5 style="text-shadow: 2px 2px 0px #000000;">Generative Design in Minecraft</h5>
+                                <p style="text-shadow: 2px 2px 0px #000000;">A competition to automatically build cities</p>
+                            </div>
+                        </div>
+                    </div>
+<!--                     <div class="carousel-item">
                         <img class="d-block w-100" src="images/profphoto_1.jpg">
                         <div class="carousel-caption">
                           <div class="carousel-caption d-none d-md-block">
                             <h5 style="text-shadow: 2px 2px 0px #000000;">Me!</h5>
                             <p style="text-shadow: 2px 2px 0px #000000;">A name I call myself</p>
                         </div>
-                    </div>                                            
+                    </div> -->                                            
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -321,7 +330,8 @@
                                     </div>
                                     <div class="card-body-tall">
                                         <p class="card-text">* = Best Paper Award || ** = Best Paper Nomination
-                                        <p class="card-text"><a href="papers/gen-design-mc.pdf" target="_blank">[2018] Generative Design in Minecraft (GMDC)</a> - Christoph Salge, Michael Cerny Green, Rodrigo Canaan, Julian Togelius @ PCG Workshop @ FDG 2018</p>
+                                        <p class="card-text"><a href="papers/evolutionarily-curated-curriculum-learning.pdf" target="_blank">[2019] Evolutionarily-Curated Curriculum Learning for Deep Reinforcement Learning Agents</a> - Michael Cerny Green, Benjamin Sergentm, Pushyami Shandilya, Vibhor Kumar – <a href="https://www.imbellus.com" target="_blank">Imbellus, Inc.</a> – Published @ Reinforcement Learning in Games Workshop @ AAAI 2019
+                                        <p class="card-text"><a href="papers/gen-design-mc.pdf" target="_blank">[2018] Generative Design in Minecraft (GMDC)</a> - Christoph Salge, Michael Cerny Green, Rodrigo Canaan, Julian Togelius – Published @ PCG Workshop @ FDG 2018</p>
                                         <p class="card-text"><a href="papers/generating-levels-teach.pdf" target="_blank">[2018] Generating Levels That Teach Mechanics</a> – Michael Cerny Green, Ahmed Khalifa, Gabriella Alves Bulhoes Barros, Andy Nealen, Julian Togelius – Published @ PCG Workshop @ FDG 2018</p>
                                         <p class="card-text">*<a href="papers/atdelfi-automatically-designing.pdf" target="_blank">[2018] AtDelfi: Automatically Designing Legible, Full Instructions For Games</a> – Michael Cerny Green, Ahmed Khalifa, Gabriella Alves Bulhoes Barros, Tiago Machado, Andy Nealen, Julian Togelius – Published @ FDG 2018</p>
                                         <p class="card-text"><a href="papers/data_agent.pdf" target="_blank">[2018] Data Agent</a> – Michael Cerny Green, Gabriella Alves Bulhoes Barros, Antonios Liapis, Julian Togelius – Published @ FDG 2018</p>
