--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -86,15 +85,15 @@
               </div>
             </div>
           </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="images/profphoto_1.jpg">
+          <!-- <div class="carousel-item">
+            <img class="d-block w-100" src="images/profphoto_1.png">
             <div class="carousel-caption">
               <div class="carousel-caption d-none d-md-block">
                 <h5 style="text-shadow: 2px 2px 0px #000000;">Me!</h5>
                 <p style="text-shadow: 2px 2px 0px #000000;">A name I call myself</p>
               </div>
             </div>
-          </div>
+          </div> -->
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
@@ -135,7 +134,7 @@
                     </p>
                     <p class="card-text">Soundcloud: <a class="card-link"
                         href="https://soundcloud.com/trichampion">ChampChampChamp</a></p>
-                    <a class="btn btn-primary btn-md active" role="button" href="papers/Resume4.0.pdf" target="_blank"
+                    <a class="btn btn-primary btn-md active" role="button" href="papers/Current.pdf" target="_blank"
                       role="button">Resume</a>
                   </div>
                 </div>
@@ -392,28 +391,35 @@
                     <p class="card-text">* = Best Paper Award || ** = Best Paper Nomination
 
 
-                      <!-- <p class="card-text"><a href="#" target="_blank">[2019] Organic Building Generation in
-                          Minecraft</a> - Michael Cerny Green, Julian Togelius - Submitted to PCG Workshop @ FDG 2019</p> -->
-                      <!-- <p class="card-text"><a href="#" target="_blank">[2019] Two-step Constructive Approaches for
+                      <p class="card-text"><a href="https://arxiv.org/pdf/1906.05094.pdf" target="_blank">[2019] Organic
+                          Building Generation in
+                          Minecraft</a> - Michael Cerny Green, Christoph Salge, Julian Togelius - Published @ PCG
+                        Workshop @ FDG 2019</p>
+                      <p class="card-text"><a href="https://arxiv.org/pdf/1906.04660.pdf" target="_blank">[2019]
+                          Two-step Constructive Approaches for
                           Dungeon Generation</a> - Michael Cerny Green, Ahmed Khalifa, Athoug A., Divyesh Surana,
-                        Antonios Liapis, Julian Togelius - Submitted to PCG Workshop at FDG 2019</p> -->
+                        Antonios Liapis, Julian Togelius - Published @ PCG Workshop at FDG 2019</p>
                       <!-- <p class="card-text"><a href="#" target="_blank">[2019] Subgoal Augmented MCTS For Video Game
                           Playing</a> - Michael Cerny Green, Ahmed Khalifa, Gabriella Alves Bulhoes Barros, Julian
                         Togelius - Submitted to IJCAI 2019</p> -->
-                      <!-- <p class="card-text"><a href="#" target="_blank">[2019] Tree Search vs Optimization Approaches for
+                      <p class="card-text"><a href="https://arxiv.org/pdf/1905.05888.pdf" target="_blank">[2019]
+                          Generative Design in Minecraft: Chronicle Challenge</a> -
+                        Christoph Salge, Christian Guckelsberger, Michael Cerny Green, Rodrigo Canaan, Julian Togelius
+                        - Published @ ICCC 2019</p>
+                      <!-- <p class="card-text"><a href="https://arxiv.org/pdf/1903.11678.pdf" target="_blank">[2019] Tree
+                          Search vs Optimization Approaches for
                           Level Generation</a> - Debosmita Bhaumik, Ahmed Khalifa, Michael Cerny Green, Julian Togelius
                         - Submitted to COG 2019</p> -->
-
-                      <p class="card-text"><a href="#" target="_blank">[2019] Intentional Level
+                      <p class="card-text"><a href="https://arxiv.org/pdf/1904.08972.pdf" target="_blank">[2019]
+                          Intentional Level
                           Design</a> - Ahmed
                         Khalifa, Michael Cerny Green, Gabriella Alves Bulhoes Barros, Julian Togelius
-                        - Accepted @
+                        - Published @
                         GECCO
                         2019</p>
-                      <p class="card-text"><a href="#" target="_blank">[2019] Evolutionarily-curated
-                          Curriculum
-                          Learning
-                          for Deep Reinforcement Learning Agents</a> - Michael Cerny Green, Benjamin
+                      <p class="card-text"><a href="https://arxiv.org/pdf/1901.05431.pdf" target="_blank">[2019]
+                          Evolutionarily-curated Curriculum Learning for Deep Reinforcement Learning Agents
+                        </a> - Michael Cerny Green, Benjamin
                         Sergent, Pushyami
                         Shandilya, Vibhor Kumar - Published @ DRL Workshop @ AAAI 2019</p>
                       <p class="card-text"><a href="papers/gen-design-mc.pdf" target="_blank">[2018]
