--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                       <p class="card-text"><a href="https://arxiv.org/pdf/1906.04660.pdf" target="_blank">[2019]
                           Two-step Constructive Approaches for
                           Dungeon Generation</a> - Michael Cerny Green, Ahmed Khalifa, Athoug A., Divyesh Surana,
-                        Antonios Liapis, Julian Togelius - Published @ PCG Workshop at FDG 2019</p>
+                        Antonios Liapis, Julian Togelius - Published @ PCG Workshop @ FDG 2019</p>
                       <!-- <p class="card-text"><a href="#" target="_blank">[2019] Subgoal Augmented MCTS For Video Game
                           Playing</a> - Michael Cerny Green, Ahmed Khalifa, Gabriella Alves Bulhoes Barros, Julian
                         Togelius - Submitted to IJCAI 2019</p> -->
