fix to spelling

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                 <div class="card">
                   <div class="card-header">
                     <a class="black-text" href="http://game.engineering.nyu.edu/tutorial-generator/" target="_blank">
-                      <h4 class="card-title">The AtDefli System</h4>
+                      <h4 class="card-title">The AtDelfi System</h4>
                       <h5 class="card-subtitle mb-2 text-muted">Automatically Designing Legible, Full Instructions</h5>
                     </a>
                   </div>
