--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                     <p>We ask: What is possible for this <b>AI TO LEARN?</b>
                       <br>But rarely do we ask: What can <b>WE LEARN</b> from this AI?</p>
                     <p class="card-text">I am currently pursuing a PhD in Video Game Design and Artificial Intelligence
-                      at New York University. Right now my
+                      at New York University. Right now my research
                       is focused around A.I. and Video Games, and how they can be applied to learning. I love video
                       games, coffee, code, dogs, and sailing.</p>
                     <p><a
@@ -389,8 +389,6 @@
                   </div>
                   <div class="card-body-tall">
                     <p class="card-text">* = Best Paper Award || ** = Best Paper Nomination
-
-
                       <p class="card-text"><a href="https://arxiv.org/pdf/1906.05094.pdf" target="_blank">[2019] Organic
                           Building Generation in
                           Minecraft</a> - Michael Cerny Green, Christoph Salge, Julian Togelius - Published @ PCG
