--- a/index.html
+++ b/index.html
@@ -85,15 +85,15 @@
               </div>
             </div>
           </div>
-          <!-- <div class="carousel-item">
-            <img class="d-block w-100" src="images/profphoto_1.png">
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images/gdmc.png">
             <div class="carousel-caption">
               <div class="carousel-caption d-none d-md-block">
-                <h5 style="text-shadow: 2px 2px 0px #000000;">Me!</h5>
-                <p style="text-shadow: 2px 2px 0px #000000;">A name I call myself</p>
+                <h5 style="text-shadow: 2px 2px 0px #000000;">Generative Design in Minecraft!</h5>
+                <p style="text-shadow: 2px 2px 0px #000000;">Procedurally Generating Cities and Stuff</p>
               </div>
             </div>
-          </div> -->
+          </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
@@ -389,6 +389,12 @@
                   </div>
                   <div class="card-body-tall">
                     <p class="card-text">* = Best Paper Award || ** = Best Paper Nomination
+                      <p class="card-text"><a href="https://arxiv.org/pdf/1909.03094.pdf" target="_blank">[2019] Automatic Critical 
+                          Mechanic Discovery in Video Games</a> - Michael Cerny Green, Ahmed Khalifa, Gabriella Alves Bulhoes Barros,
+                          Tiago Machado, Julian Togelius - Submitted to AAAI 2019</p>
+                      <p class="card-text"><a href="https://arxiv.org/pdf/1910.01603.pdf" target="_blank">[2019] Bootstrapping 
+                          Conditional GANs for Video Game Level Generation</a> - Ruben Rodriguez Torrado, Ahmed Khalifa, 
+                          Michael Cerny Green, Niels Justesen, Sebastian Risi, Julian Togelius - Submitted to AAAI 2019</p>
                       <p class="card-text"><a href="https://arxiv.org/pdf/1906.05094.pdf" target="_blank">[2019] Organic
                           Building Generation in
                           Minecraft</a> - Michael Cerny Green, Christoph Salge, Julian Togelius - Published @ PCG
@@ -397,17 +403,14 @@
                           Two-step Constructive Approaches for
                           Dungeon Generation</a> - Michael Cerny Green, Ahmed Khalifa, Athoug A., Divyesh Surana,
                         Antonios Liapis, Julian Togelius - Published @ PCG Workshop @ FDG 2019</p>
-                      <!-- <p class="card-text"><a href="#" target="_blank">[2019] Subgoal Augmented MCTS For Video Game
-                          Playing</a> - Michael Cerny Green, Ahmed Khalifa, Gabriella Alves Bulhoes Barros, Julian
-                        Togelius - Submitted to IJCAI 2019</p> -->
                       <p class="card-text"><a href="https://arxiv.org/pdf/1905.05888.pdf" target="_blank">[2019]
                           Generative Design in Minecraft: Chronicle Challenge</a> -
                         Christoph Salge, Christian Guckelsberger, Michael Cerny Green, Rodrigo Canaan, Julian Togelius
                         - Published @ ICCC 2019</p>
-                      <!-- <p class="card-text"><a href="https://arxiv.org/pdf/1903.11678.pdf" target="_blank">[2019] Tree
+                      <p class="card-text"><a href="https://arxiv.org/pdf/1903.11678.pdf" target="_blank">[2019] Tree
                           Search vs Optimization Approaches for
                           Level Generation</a> - Debosmita Bhaumik, Ahmed Khalifa, Michael Cerny Green, Julian Togelius
-                        - Submitted to COG 2019</p> -->
+                        - Published on arxiv</p>
                       <p class="card-text"><a href="https://arxiv.org/pdf/1904.08972.pdf" target="_blank">[2019]
                           Intentional Level
                           Design</a> - Ahmed
