Updated resume to point at the right link!

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <a class="nav-link" href="https://mikecgreenblog.wordpress.com/" target="_blank">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="papers/Resume4.0.pdf" target="_blank">CV</a>
+            <a class="nav-link" href="papers/Current.pdf" target="_blank">CV</a>
           </li>
         </ul>
         <span class="navbar-text">
