--- a/index.html
+++ b/index.html
@@ -130,14 +130,14 @@
                 <div class="card">
                   <div class="card-header">
                     <h4 class="card-title">Contact Me</h4>
-                    <h5 class="card-subtitle mb-2 text-muted">various ways to stalk me</h5>
+                    <h5 class="card-subtitle mb-2 text-muted">various ways to find me</h5>
                   </div>
                   <div class="card-body">
+                    <a class="btn btn-primary btn-md active" role="button" href="papers/Current.pdf" target="_blank"
+                      role="button">Resume</a>
                     <p class="card-text">Email: <i id="emailAddress">@</i></p>
                     <p class="card-text">Blog: <a class="card-link" href="https://mikecgreenblog.wordpress.com/">The
                         Musings</a></p>
-                    <p class="card-text">Facebook: <a class="card-link" href="https://www.facebook.com/mcgreentn">My
-                        Profile</a></p>
                     <p class="card-text">Twitter: <a class="card-link"
                         href="https://twitter.com/Bumblebor">@Bumblebor</a></p>
                     <p class="card-text">LinkedIn: <a class="card-link"
@@ -146,8 +146,6 @@
                     </p>
                     <p class="card-text">Soundcloud: <a class="card-link"
                         href="https://soundcloud.com/trichampion">ChampChampChamp</a></p>
-                    <a class="btn btn-primary btn-md active" role="button" href="papers/Current.pdf" target="_blank"
-                      role="button">Resume</a>
                   </div>
                 </div>
               </div>
