--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
               <div class="col-lg-12">
                 <div class="card">
                   <div class="card-header">
-                    <a class="black-text" href="http://www.gvgai.net/">
+                    <a class="black-text" href="https://gendesignmc.engineering.nyu.edu/">
                       <h4 class="card-title">The GDMC Challenge</h4>
                       <h5 class="card-subtitle mb-2 text-muted">generative design in minecraft</h5>
                     </a>
