changed assets name

--- a/media.html
+++ b/media.html
@@ -112,7 +112,7 @@
         <!-- Bootstrap Core JavaScript -->
         <script src="js/bootstrap.min.js"></script>
         
-        <script src="_assets/media.js"></script>
+        <script src="assets/media.js"></script>
         
         <script type="text/javascript">
             $(document).ready(function(){
