--- a/research.html
+++ b/research.html
@@ -108,7 +108,7 @@
   <!-- Bootstrap Core JavaScript -->
   <script src="js/bootstrap.min.js"></script>
 
-  <script src="_assets/research.js"></script>
+  <script src="assets/research.js"></script>
   
   <script type="text/javascript">
     $(document).ready(function(){
