--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
         <footer>
           <div class="row">
             <div class="col-lg-12">
-              <p>Copyright &copy; Michael Cerny Green 2021. Just kidding you can take my stuff.</p>
+              <p>Copyright &copy; Michael Cerny Green 2022.</p>
             </div>
           </div>
         </footer>
