--- a/media.html
+++ b/media.html
@@ -101,7 +101,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <p>Copyright &copy; Michael Cerny Green 2021. Just kidding you can take my stuff.</p>
+                        <p>Copyright &copy; Michael Cerny Green 2022.</p>
                     </div>
                 </div>
             </div>
