--- a/research.html
+++ b/research.html
@@ -84,7 +84,7 @@
               <h2>Published Work</h2>
             </div>
             <div class="row">
-              <i>3 journal articles, 18 conference papers, 4 workshop papers in reverse chronological order</i>
+              <i>3 journal articles, 18 conference papers, 4 workshop papers in reverse chronological order. Some of these projects have demos and code. A few even have blog posts!</i>
               <br/><br/>
             </div>
             <div class="container" id="researchcontainer">
@@ -97,7 +97,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <p>Copyright &copy; Michael Cerny Green 2021. Just kidding you can take my stuff.</p>
+            <p>Copyright &copy; Michael Cerny Green 2022.</p>
           </div>
         </div>
       </div>
@@ -115,10 +115,30 @@
       var myResearch = data.papers;
       var researchContainer = $("#researchcontainer");
       $.each(myResearch, function(index, item){
-        researchContainer.append(
-          '<div class="col"><div class="row"><p>' + item.authors + '. ' + '<a href="' + item.link + '" target="_blank">[' + item.year + '] '+ item.title + '</a>. '+ item.conference + '</p></div></div>'
-        )
-      });
-    });       
+        
+        var paper = '<div class="row top-buffer"><div class="col"><p>' + item.authors + '. <b>[' + item.year + '] '+ item.title + '</b>. '+ item.conference + '</p></div></div>' + 
+            '<div class="row top-squeeze"><div class="col-lg-12"><a role="button" class="btn btn-primary lefty-button btn-sm" href="' + item.link + '" target="_blank">PDF</button>'
+        if (item.blog != undefined) {
+          paper += '<a role="button" class="btn btn-info lefty-button btn-sm" href="' + item.blog + '" target="_blank">Blog</button>'  
+        }
+        if (item.code != undefined) {
+          paper += '<a role="button" class="btn btn-secondary lefty-button btn-sm" href="' + item.code + '" target="_blank">Code</button>'  
+        }
+        if (item.demo != undefined) {
+          paper += '<a role="button" class="btn btn-success lefty-button btn-sm" href="' + item.demo + '" target="_blank">Demo</button>'  
+        }
+        if (item.slides != undefined) {
+          paper += '<a role="button" class="btn btn-secondary lefty-button btn-sm" href="' + item.slides + '" target="_blank">Slides</button>'  
+        }
+        paper += '</div></div>'
+        researchContainer.append(paper)
+      });   
+    });    
   </script>
 </body>
+
+<!-- researchContainer.append(
+          
+        ) -->
+
+        <!-- '<div class="col"><div class="row"><p>' + item.authors + '. ' + '<a href="' + item.link + '" target="_blank">[' + item.year + '] '+ item.title + '</a>. '+ item.conference + '</p></div></div>' -->
