--- a/research.html
+++ b/research.html
@@ -115,23 +115,23 @@
       var myResearch = data.papers;
       var researchContainer = $("#researchcontainer");
       $.each(myResearch, function(index, item){
-        
+        console.log(item)
         var paper = '<div class="row top-buffer"><div class="col"><p>' + item.authors + '. <b>[' + item.year + '] '+ item.title + '</b>. '+ item.conference + '</p></div></div>' + 
-            '<div class="row top-squeeze"><div class="col-lg-12"><a role="button" class="btn btn-primary lefty-button btn-sm" href="' + item.link + '" target="_blank">PDF</button>'
+            '<div class="row top-squeeze"><div class="col-lg-12"><a role="button" class="btn btn-primary lefty-button btn-sm" href="' + item.link + '" target="_blank">PDF</button>';
         if (item.blog != undefined) {
-          paper += '<a role="button" class="btn btn-info lefty-button btn-sm" href="' + item.blog + '" target="_blank">Blog</button>'  
+          paper += '<a role="button" class="btn btn-info lefty-button btn-sm" href="' + item.blog + '" target="_blank">Blog</button>';
         }
         if (item.code != undefined) {
-          paper += '<a role="button" class="btn btn-secondary lefty-button btn-sm" href="' + item.code + '" target="_blank">Code</button>'  
+          paper += '<a role="button" class="btn btn-secondary lefty-button btn-sm" href="' + item.code + '" target="_blank">Code</button>';
         }
         if (item.demo != undefined) {
-          paper += '<a role="button" class="btn btn-success lefty-button btn-sm" href="' + item.demo + '" target="_blank">Demo</button>'  
+          paper += '<a role="button" class="btn btn-success lefty-button btn-sm" href="' + item.demo + '" target="_blank">Demo</button>';
         }
         if (item.slides != undefined) {
-          paper += '<a role="button" class="btn btn-secondary lefty-button btn-sm" href="' + item.slides + '" target="_blank">Slides</button>'  
+          paper += '<a role="button" class="btn btn-secondary lefty-button btn-sm" href="' + item.slides + '" target="_blank">Slides</button>';  
         }
-        paper += '</div></div>'
-        researchContainer.append(paper)
+        paper += '</div></div>';
+        researchContainer.append(paper);
       });   
     });    
   </script>
