--- a/research.html
+++ b/research.html
@@ -115,8 +115,7 @@
       var myResearch = data.papers;
       var researchContainer = $("#researchcontainer");
       $.each(myResearch, function(index, item){
-        console.log(item)
-        var paper = '<div class="row top-buffer"><div class="col"><p>' + item.authors + '. <b>[' + item.year + '] '+ item.title + '</b>. '+ item.conference + '</p></div></div>' + 
+        var paper = '<div class="row top-buffer"><div class="col"><p><b>[' + item.year + '] '+ item.title + '</b>. <em>' +  item.authors + '</em>. ' + item.conference + '</p></div></div>' + 
             '<div class="row top-squeeze"><div class="col-lg-12"><a role="button" class="btn btn-primary lefty-button btn-sm" href="' + item.link + '" target="_blank">PDF</button>';
         if (item.blog != undefined) {
           paper += '<a role="button" class="btn btn-info lefty-button btn-sm" href="' + item.blog + '" target="_blank">Blog</button>';
