--- a/research.html
+++ b/research.html
@@ -84,7 +84,7 @@
               <h2>Published Work</h2>
             </div>
             <div class="row">
-              <i>3 journal articles, 18 conference papers, 4 workshop papers in reverse chronological order. Some of these projects have demos and code. A few even have blog posts!</i>
+              <i>3 journal articles, 18 conference papers, 4 workshop papers in reverse chronological order. Some of these projects have demos and code, albeit not always in a friendly format (working on that!). A few even have blog posts!</i>
               <br/><br/>
             </div>
             <div class="container" id="researchcontainer">
