--- a/research.html
+++ b/research.html
@@ -3,144 +3,151 @@
 
 <head>
 
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-  <title>Mike C Green</title>
+    <title>Mike C Green</title>
 
-  <!-- Bootstrap Core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Custom CSS -->
-  <link href="css/modern-business.css" rel="stylesheet">
-  <link href="css/research.css" rel="stylesheet">
+    <!-- Custom CSS -->
+    <link href="css/modern-business.css" rel="stylesheet">
+    <link href="css/research.css" rel="stylesheet">
 
-  <!-- Custom Fonts -->
-  <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
+    <!-- Custom Fonts -->
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
 
 
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-  
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-54297010-6"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
-    gtag('config', 'UA-54297010-6');
-  </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-54297010-6"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-54297010-6');
+    </script>
 
 </head>
+
 <body>
     <!-- Navigation -->
-      <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Michael Cerny Green</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html" aria-current="page">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="research.html">Research</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="media.html">Media</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="https://mikecgreenblog.wordpress.com/" target="_blank">Blog</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="papers/Current.pdf" target="_blank">CV</a>
-              </li>
-            </ul>
-            <span class="navbar-text">
-              AI-Games-Learning
-            </span>
-          </div>
+            <a class="navbar-brand" href="#">Michael Cerny Green</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html" aria-current="page">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="research.html">Research</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="media.html">Media</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://mikecgreenblog.wordpress.com/" target="_blank">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="papers/Current.pdf" target="_blank">CV</a>
+                    </li>
+                </ul>
+                <span class="navbar-text">
+                    AI-Games-Learning
+                </span>
+            </div>
         </div>
-      </nav>
+    </nav>
     <!-- <div class="span-12"> -->
-      <div class="container">
-          <div class="col-md-12">
+    <div class="container">
+        <div class="col-md-12">
             <div class="row">
-              <h2>Published Work</h2>
+                <h2>Published Work</h2>
             </div>
             <div class="row">
-              <i>3 journal articles, 18 conference papers, 4 workshop papers in reverse chronological order. Some of these projects have demos and code, albeit not always in a friendly format (working on that!). A few even have blog posts!</i>
-              <br/><br/>
+                <i>3 journal articles, 18 conference papers, 4 workshop papers in reverse chronological order. Some of
+                    these projects have demos and code, albeit not always in a friendly format (working on that!). A few
+                    even have blog posts!</i>
+                <br /><br />
             </div>
             <div class="container" id="researchcontainer">
 
             </div>
-          </div>
+        </div>
     </div>
     <!-- </div> -->
     <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <p>Copyright &copy; Michael Cerny Green 2022.</p>
-          </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright &copy; Michael Cerny Green 2022.</p>
+                </div>
+            </div>
         </div>
-      </div>
     </footer>
-  <!-- jQuery -->
-  <script src="js/jquery.js"></script>
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
 
-  <!-- Bootstrap Core JavaScript -->
-  <script src="js/bootstrap.min.js"></script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
 
-  <script src="assets/research.js"></script>
-  
-  <script type="text/javascript">
-    $(document).ready(function(){
-      var myResearch = data.papers;
-      var researchContainer = $("#researchcontainer");
-      $.each(myResearch, function(index, item){
-        var paper = '<div class="row top-buffer"><div class="col"><p><b>[' + item.year + '] '+ item.title + '</b>. <em>' +  item.authors + '</em>. ' + item.conference + '</p></div></div>' + 
-            '<div class="row top-squeeze"><div class="col-lg-12"><a role="button" class="btn btn-primary lefty-button btn-sm" href="' + item.link + '" target="_blank">PDF</button>';
-        if (item.blog != undefined) {
-          paper += '<a role="button" class="btn btn-info lefty-button btn-sm" href="' + item.blog + '" target="_blank">Blog</button>';
-        }
-        if (item.code != undefined) {
-          paper += '<a role="button" class="btn btn-secondary lefty-button btn-sm" href="' + item.code + '" target="_blank">Code</button>';
-        }
-        if (item.demo != undefined) {
-          paper += '<a role="button" class="btn btn-success lefty-button btn-sm" href="' + item.demo + '" target="_blank">Demo</button>';
-        }
-        if (item.video != undefined){
-          paper += '<a role="button" class="btn btn-warning lefty-button btn-sm" href="' + item.video + '" target="_blank">Video</button>';
-        }
-        if (item.slides != undefined) {
-          paper += '<a role="button" class="btn btn-danger lefty-button btn-sm" href="' + item.slides + '" target="_blank">Slides</button>';  
-        }
-        paper += '</div></div>';
-        researchContainer.append(paper);
-      });   
-    });    
-  </script>
+    <script src="assets/research.js"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            var myResearch = data.papers;
+            var researchContainer = $("#researchcontainer");
+            $.each(myResearch, function (index, item) {
+                var paper = '<div class="row top-buffer"><div class="col"><p><b>[' + item.year + '] ' + item.title + '</b>. <em>' + item.authors + '</em>. ' + item.conference + '</p></div></div>' +
+                    '<div class="row top-squeeze"><div class="col-lg-12"><a role="button" class="btn btn-primary lefty-button btn-sm" href="' + item.link + '" target="_blank">PDF</button>';
+                if (item.blog != undefined) {
+                    paper += '<a role="button" class="btn btn-info lefty-button btn-sm" href="' + item.blog + '" target="_blank">Blog</button>';
+                }
+                if (item.code != undefined) {
+                    paper += '<a role="button" class="btn btn-secondary lefty-button btn-sm" href="' + item.code + '" target="_blank">Code</button>';
+                }
+                if (item.demo != undefined) {
+                    paper += '<a role="button" class="btn btn-success lefty-button btn-sm" href="' + item.demo + '" target="_blank">Demo</button>';
+                }
+                if (item.video != undefined) {
+                    paper += '<a role="button" class="btn btn-warning lefty-button btn-sm" href="' + item.video + '" target="_blank">Video</button>';
+                }
+                if (item.slides != undefined) {
+                    paper += '<a role="button" class="btn btn-danger lefty-button btn-sm" href="' + item.slides + '" target="_blank">Slides</button>';
+                }
+                if (item.poster != undefined) {
+                    paper += '<a role="button" class="btn btn-dark lefty-button btn-sm" href="' + item.poster + '" target="_blank">Poster</button>';
+                }
+                paper += '</div></div>';
+                researchContainer.append(paper);
+            });
+        });    
+    </script>
 </body>
 
 <!-- researchContainer.append(
           
         ) -->
 
-        <!-- '<div class="col"><div class="row"><p>' + item.authors + '. ' + '<a href="' + item.link + '" target="_blank">[' + item.year + '] '+ item.title + '</a>. '+ item.conference + '</p></div></div>' -->
+<!-- '<div class="col"><div class="row"><p>' + item.authors + '. ' + '<a href="' + item.link + '" target="_blank">[' + item.year + '] '+ item.title + '</a>. '+ item.conference + '</p></div></div>' -->
