added microrct card

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <div class="row">
               <!-- Contact Me -->
               <div class="col-lg-12">
-                <div class="card">
+                <div class="card border border-primary shadow-0 mb-3">
                   <div class="card-header">
                     <h4 class="card-title">Contact Me</h4>
                     <h5 class="card-subtitle mb-2 text-muted">various ways to find me</h5>
@@ -284,7 +284,6 @@
           </div>
           <!-- Center -->
           <div class="col-md-4">
-            <div class="row">
               <!-- The AtDelfi System -->
               <div class="col-lg-12">
                 <div class="card">
@@ -303,6 +302,22 @@
                   </div>
                 </div>
               </div>
+              <!-- Micro RCT -->
+              <div class="col-lg-12">
+                <div class="card">
+                  <div class="card-header">
+                    <a class="black-text" href="https://github.com/smearle/micro-rct" target="_blank">
+                      <h4 class="card-title">MicroRCT</h4>
+                      <h5 class="card-subtitle mb-2 text-muted">a theme park AI framework</h5>
+                    </a>
+                  </div>
+                  <div class="card-body" style="height:120%">
+                    <p class="card-text">MicroRCT is an open source simulator inspired by the theme park sandbox game RollerCoaster Tycoon. The goal in MicroRCT is to place rides and shops in an amusement park to maximize profit earned from park guests.</p>
+                    <a href="https://github.com/smearle/micro-rct" target="_blank"><img
+                        class="img-responsive img-rounded img-hover" src="images/micro_rct.png" /></a>
+                  </div>
+                </div>
+              </div>              
               <!-- GDMC -->
               <div class="col-lg-12">
                 <div class="card">
@@ -384,11 +399,9 @@
                   </div>
                 </div>
               </div>
-            </div>
           </div>
           <!-- Right Gutter-->
           <div class="col-md-4">
-            <div class="row">
               <!-- The Musings Blog -->
               <div class="col-lg-12">
                 <div class="card">
@@ -427,6 +440,7 @@
                   </div>
                 </div>
               </div>
+              <!-- 2118: Corruption -->
               <div class="col-lg-12">
                 <div class="card">
                   <div class="card-header">
@@ -449,6 +463,7 @@
                   </div>
                 </div>
               </div>
+              <!-- Edu-Venture -->
               <div class="col-lg-12">
                 <div class="card">
                   <div class="card-header">
@@ -467,6 +482,7 @@
                   </div>
                 </div>
               </div>
+              <!-- Music -->
               <div class="col-lg-12">
                 <div class="card">
                   <div class="card-header">
@@ -482,6 +498,7 @@
 
                     <h5 class="card-text">Solo Releases</h5>
                     <ul>
+                      <li><a href="https://soundcloud.com/trichampion/minidungeons?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">Minidungeons Theme</a></li>
                       <li><a href="https://soundcloud.com/trichampion/autopilot-remix" target="_blank">Autopilot
                           Remix</a></li>
                       <li><a href="https://soundcloud.com/trichampion/prototype-2" target="_blank">Protoype 2</a></li>
