--- a/index.html
+++ b/index.html
@@ -419,6 +419,22 @@
                   </div>
                 </div>
               </div>
+              <!-- Trumpland -->
+              <div class="col-lg-12">
+                <div class="card">
+                  <div class="card-header">
+                    <a class="black-text" href="https://champchampchamp.itch.io/trumpland" target="_blank">
+                      <h4 class="card-title">Trumpland</h4>
+                      <h5 class="card-subtitle mb-2 text-muted">a political Twitter simulation</h5>
+                    </a>
+                  </div>
+                  <div class="card-body" style="height:120%">
+                    <p class="card-text">Not as much as enjoyment as "unjoyment", Trumpland is a political satire game about Twitter in the age of Trumpism. Become the Don and tweet as he tweets. The more you match what he actually wrote, the more followers and likes you gain.</p>
+                    <a href="https://champchampchamp.itch.io/trumpland" target="_blank"><img
+                        class="img-responsive img-rounded img-hover" src="images/trumpland.png" /></a>
+                  </div>
+                </div>
+              </div>
               <!-- GVGAI -->
               <div class="col-lg-12">
                 <div class="card">
