--- a/research.html
+++ b/research.html
@@ -58,10 +58,10 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html" aria-current="page">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="research.html">Research</a>
+                        <a class="nav-link active" href="research.html" aria-current="page">Research</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="media.html">Media</a>
@@ -86,7 +86,7 @@
                 <h2>Published Work</h2>
             </div>
             <div class="row">
-                <i>3 journal articles, 18 conference papers, 4 workshop papers in reverse chronological order. Some of
+                <i><a id="journal-count"></a> journal articles, <a id="conference-count"></a> conference papers, <a id="workshop-count"></a> workshop papers in reverse chronological order. Some of
                     these projects have demos and code, albeit not always in a friendly format (working on that!). A few
                     even have blog posts!</i>
                 <br /><br />
@@ -118,6 +118,9 @@
         $(document).ready(function () {
             var myResearch = data.papers;
             var researchContainer = $("#researchcontainer");
+            let journalCount = 0;
+            let conferenceCount = 0;
+            let workshopCount = 0;
             $.each(myResearch, function (index, item) {
                 var paper = '<div class="row top-buffer"><div class="col"><p><b>[' + item.year + '] ' + item.title + '</b>. <em>' + item.authors + '</em>. ' + item.conference + '</p></div></div>' +
                     '<div class="row top-squeeze"><div class="col-lg-12"><a role="button" class="btn btn-primary lefty-button btn-sm" href="' + item.link + '" target="_blank">PDF</button>';
@@ -141,7 +144,25 @@
                 }
                 paper += '</div></div>';
                 researchContainer.append(paper);
+
+                if (item.tier == "journal") {
+                    journalCount++;
+                }
+                else if (item.tier == "conference") {
+                    conferenceCount++;
+                }
+                else if (item.tier == "workshop") {
+                    workshopCount++;
+                }
             });
+
+            let journalItem = document.getElementById('journal-count');
+            journalItem.innerHTML = journalCount;
+            let conferenceItem = document.getElementById('conference-count');
+            conferenceItem.innerHTML = conferenceCount;
+            let workshopItem = document.getElementById('workshop-count');
+            workshopItem.innerHTML = workshopCount;
+
         });    
     </script>
 </body>
