--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     <button class="btn btn-primary" id="generateLevel">Generate</button>
                     <div class="container">
                       <div class="row">
-                        <div class="col-xl-2 col-lg-12">
+                        <div class="col-12">
                           <div class="row">
                             <label for="range-width" class="form-label">Width: </label>
                             <output>10</output>
@@ -250,7 +250,7 @@
                             <input type="range" class="form-range" id="range-openess" value="5" min="1" max="10" step="1" oninput="this.previousElementSibling.value = this.value">
                           </div>
                         </div>
-                        <div class="col-xl-10 col-lg-12">
+                        <div class="col-12">
                           <div class="row">
                             <div class="col d-flex justify-content-center">
                               <div id="dungeon-canvas">
