--- a/index.html
+++ b/index.html
@@ -559,7 +559,11 @@
     <!-- Dungeon Generator Scripts -->
     <script src="js/level_generator/visualizer.js"></script>
     <script src="js/level_generator/digger_generator.js"></script>
+    <script src="js/level_generator/constrain_furnisher.js"></script>
+    <script src="js/search/astar_tree.js"></script>
+    <script src="js/search/astar_node.js"></script>
     <script src="js/level_generator/generate_level.js"></script>
+    <script src="js/level_generator/test_script.js"></script>
   </div>
 
 </body>
